[workspace]
resolver = "2"
members = [
    "quill-account",
    "quill-cli",
    "quill-statement",
    "quill-utils",
]

[workspace.package]
version = "0.8.5"
edition = "2021"
authors = ["James Hawley <developer@jrhawley.ca>"]
description = "Query all your bills and accounts to check on your financial statements."
rust-version = "1.64"

[workspace.dependencies]
cargo-make = "0.36"
cargo-nextest = "0.9"
chrono = { version = "0.4.23", default-feature = false, features = ["clock", "serde"] }
dirs-next = "2.0.0"
kronos = "0.1.4"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
toml = "0.5.8"
walkdir = "2.3.2"
