[package]
name = "quill_account"
version = "0.3.1"
edition = "2021"

[dependencies]
chrono = "0.4.19"
kronos = "0.1.4"
quill_statement = { path = "../quill-statement" }
quill_utils = { path = "../quill-utils" }
regex = "1.5.4"
thiserror = "1.0.30"
toml = "0.5.8"
walkdir = "2.3.2"

[build-dependencies]
cargo-make = "0.36.1"

[dev-dependencies]
cargo-nextest = "0.9.38"
