[package]
name = "quill_account"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
rust-version = "1.64"

[dependencies]
chrono = { workspace = true }
kronos = { workspace = true }
quill_statement = { path = "../quill-statement" }
quill_utils = { path = "../quill-utils" }
regex = "1.5.4"
thiserror = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }

[build-dependencies]
cargo-make = { workspace = true }

[dev-dependencies]
cargo-nextest = { workspace = true }
