[package]
name = "quill"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
rust-version = "1.64"

[dependencies]
anyhow = "1.0.53"
chrono = { workspace = true }
clap = { version = "3", features = ["cargo", "derive"] }
crossterm = "0.20.0"
dirs-next = { workspace = true }
itertools = "0.10.1"
kronos = { workspace = true }
lazy_static = "1.4.0"
log = { version = "0.4", features = ["release_max_level_info"] }
open = "2"
quill_account = { path = "../quill-account" }
quill_statement = { path = "../quill-statement" }
quill_utils = { path = "../quill-utils" }
serde = { workspace = true }
toml = { workspace = true }
tui = { version = "0.15.0", default-features = false, features = ["crossterm"] }
walkdir = { workspace = true }

[[bin]]
name = "quill"
path = "src/main.rs"

[build-dependencies]
cargo-make = { workspace = true }

[dev-dependencies]
cargo-nextest = { workspace = true }
