[package]
name = "quill_statement"
version = { workspace = true }
edition = { workspace = true }
rust-version = "1.64"

[dependencies]
quill_utils = { path = "../quill-utils/" }
chrono = { workspace = true }
kronos = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[build-dependencies]
cargo-make = { workspace = true }

[dev-dependencies]
cargo-nextest = { workspace = true }
